--- a/index.html
+++ b/index.html
@@ -3,10 +3,382 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duong Phan</title>
-    <link href="css/styles.css" rel="stylesheet" />
+
+    <!--==================== FONT AWESOME ====================-->
+    <script
+      src="https://kit.fontawesome.com/b0cfaa7c88.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--==================== SWIPER CSS ====================-->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
+
+    <!--==================== CSS ====================-->
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <title>Responsive Portfolio Website</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <!--==================== HEADER ====================-->
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">Leroy</a>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list grid">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">
+                <i class="fa-solid fa-house nav__icon"></i> Home
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#about" class="nav__link">
+                <i class="fa-solid fa-user nav__icon"></i> About
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#qualifications" class="nav__link">
+                <i class="fa-solid fa-user nav__icon"></i> Qualifications
+              </a>
+            </li>
+
+            </li>
+
+            <li class="nav__item">
+              <a href="#contact" class="nav__link">
+                <i class="fa-solid fa-message nav__icon"></i> Contact Me
+              </a>
+            </li>
+          </ul>
+          <i class="fa-solid fa-xmark nav__close" id="nav-close"></i>
+        </div>
+
+        <div class="nav__btns">
+          <!-- Theme Change Button -->
+          <i class="fa-regular fa-moon change-theme" id="theme-button"></i>
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!--==================== MAIN ====================-->
+    <main class="main">
+      <!--==================== HOME ====================-->
+      <section class="home section" id="home">
+        <div class="home__container container grid">
+          <div class="home__content grid">
+            <div class="home__social">
+              <a
+                href="https://www.linkedin.com/in/duonghaophan/"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a
+                href="https://twitter.com/L3rpio"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a
+                href="https://github.com/L3rpio"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="fa-brands fa-square-github"></i>
+              </a>
+            </div>
+
+            <div class="home__img">
+              <svg
+                class="home__blob"
+                viewBox="0 0 200 187"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <mask id="mask0" mask-type="alpha">
+                  <path
+                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
+                  />
+                </mask>
+                <g mask="url(#mask0)">
+                  <path
+                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
+                  />
+                  <image
+                    class="home__blob-img"
+                    x="12"
+                    y="18"
+                    xlink:href="assets/img/perfil.png"
+                  />
+                </g>
+              </svg>
+            </div>
+            <div class="home__data">
+              <h1 class="home__title">Hi, I'm Leroy</h1>
+              <h3 class="home__subtitle">Fullstack developer</h3>
+              <p class="home__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                repellendus eum excepturi omnis
+              </p>
+              <a href="#contact" class="button button--flex">
+                Contact Me&nbsp;
+                <i class="fa-solid fa-paper-plane button__icon"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="home__scroll">
+            <a class="home__scroll-button button--flex">
+              <i class="fa-solid fa-computer-mouse home__scroll-mouse"></i>
+              <span class="home__scroll-name"> Scroll down</span>
+              <i class="fa-solid fa-arrow-down"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!--==================== ABOUT ====================-->
+      <section class="about section" id="about">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My introduction</span>
+
+        <div class="about__container container grid">
+          <img src="./img/about.jpg" alt="" class="about__img" />
+
+          <div class="about__data">
+            <p class="about__description">
+              Web developer, with extensive knowledge and years of experience,
+              working in web technologies and Ui / Ux design, delivering quality
+              work.
+            </p>
+
+            <div class="about__info">
+              <div>
+                <span class="about__info-title">08+</span>
+                <span class="about__info-name"
+                  >Years <br />
+                  experience</span
+                >
+              </div>
+
+              <div>
+                <span class="about__info-title">20+</span>
+                <span class="about__info-name"
+                  >Completed <br />
+                  Projects</span
+                >
+              </div>
+
+              <div>
+                <span class="about__info-title">05+</span>
+                <span class="about__info-name"
+                  >Companies <br />
+                  Worked At</span
+                >
+              </div>
+            </div>
+
+            <div class="about__buttons">
+              <a
+                download=""
+                href="./pdf/duong_general_resume_2023.pdf"
+                class="button button--flex"
+              >
+                Download CV
+                <i class="fa-solid fa-file-arrow-down button__icon"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--==================== QUALIFICATION ====================-->
+      <section class="qualification section" id="qualifications">
+        <h2 class="section__title">Qualifications</h2>
+        <span class="section__subtitle"
+          >My personal and professional journey</span
+        >
+        <div class="qualification__container container">
+          <div class="qualification__sections">
+            <!--==================== QUALIFICATION CONTENT ====================-->
+            <div class="qualification__content">
+              <!--==================== QUALIFICATION CONTENT 1 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">High School Student</h3>
+                  <span class="qualification__subtitle">Jersey Village HS</span>
+                  <div class="qualification__calendar">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    2016 - 2020
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!--==================== QUALIFICATION CONTENT 2 ====================-->
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">University Student</h3>
+                  <span class="qualification__subtitle"
+                    >University of Houston</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    2020 - 2024
+                  </div>
+                </div>
+              </div>
+
+              <!--==================== QUALIFICATION CONTENT 3 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Software Engineer Intern</h3>
+                  <span class="qualification__subtitle">Avanade</span>
+                  <div class="qualification__calendar">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    Summer of 2023
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--==================== CONTACT ME ====================-->
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">Get in touch</span>
+
+        <div class="contact__container container grid">
+          <div>
+            <div class="contact__information">
+              <i class="fa-solid fa-phone contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Call me</h3>
+                <span class="contact__subtitle">(346) 283 0249</span>
+              </div>
+            </div>
+
+            <div class="contact__information">
+              <i class="fa-regular fa-envelope contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Email me</h3>
+                <span class="contact__subtitle">leroyphan39@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+          <form action="" class="contact__form grid">
+            <div class="contact__inputs grid">
+              <div class="contact__content">
+                <label for="" class="contact__label">Name</label>
+                <input type="text" class="contact__input" />
+              </div>
+              <div class="contact__content">
+                <label for="" class="contact__label">Email</label>
+                <input type="email" class="contact__input" />
+              </div>
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Project</label>
+              <input type="text" class="contact__input" />
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Message</label>
+              <textarea
+                name=""
+                id=""
+                cols="0"
+                rows="7"
+                class="contact__input"
+              ></textarea>
+            </div>
+            <div>
+              <a href="#" class="button button--flex">
+                Send Message <i class="fa-regular fa-paper-plane"></i>
+              </a>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <!--==================== FOOTER ====================-->
+    <footer class="footer">
+      <div class="footer__bg">
+        <div class="footer__container container grid">
+          <div>
+            <h1 class="footer__title">Leroy</h1>
+            <span class="footer__subtitle">Full Stack Developer</span>
+          </div>
+
+          <ul class="footer__links">
+            <li>
+              <a href="#" class="footer__link">something</a>
+            </li>
+            <li>
+              <a href="#" class="footer__link">something</a>
+            </li>
+            <li>
+              <a href="#contact" class="footer__link">Contact me</a>
+            </li>
+          </ul>
+
+          <div class="footer__socials">
+            <a href="" class="footer__social">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="" class="footer__social">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+
+            <a href="" class="footer__social">
+              <i class="fa-brands fa-discord"></i>
+            </a>
+          </div>
+        </div>
+        <p class="footer__copy">&#169; Leroy. All rights reserved</p>
+      </div>
+    </footer>
+
+    <!--==================== SCROLL TOP ====================-->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="fa-solid fa-arrow-up scrollup__icon"></i>
+    </a>
+
+    <!--==================== SWIPER JS ====================-->
+    <script src="./js/swiper-bundle.min.js"></script>
+
+    <!--==================== MAIN JS ====================-->
+    <script src="./js/main.js"></script>
   </body>
 </html>
