adjusted information and photos on index.html

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <title>Responsive Portfolio Website</title>
+    <title>Duong Phan</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Leroy</a>
+        <a href="#" class="nav__logo">Duong</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
@@ -118,19 +118,17 @@
                   />
                   <image
                     class="home__blob-img"
-                    x="12"
-                    y="18"
-                    xlink:href="assets/img/perfil.png"
+                    y="-30"
+                    xlink:href="./img/professional_leroy.jpg"
                   />
                 </g>
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, I'm Leroy</h1>
-              <h3 class="home__subtitle">Fullstack developer</h3>
+              <h1 class="home__title">Hi, I'm Duong</h1>
+              <!-- <h3 class="home__subtitle">Software Engineer</h3> -->
               <p class="home__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                repellendus eum excepturi omnis
+                I'm a software engineer that is based in Houston, Texas
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me&nbsp;
@@ -141,7 +139,7 @@
 
           <div class="home__scroll">
             <a class="home__scroll-button button--flex">
-              <i class="fa-solid fa-computer-mouse home__scroll-mouse"></i>
+              <!-- <i class="fa-solid fa-computer-mouse home__scroll-mouse"></i> -->
               <span class="home__scroll-name"> Scroll down</span>
               <i class="fa-solid fa-arrow-down"></i>
             </a>
@@ -152,19 +150,18 @@
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
         <h2 class="section__title">About Me</h2>
-        <span class="section__subtitle">My introduction</span>
+        <span class="section__subtitle">Introduction</span>
 
         <div class="about__container container grid">
-          <img src="./img/about.jpg" alt="" class="about__img" />
+          <img src="./img/dance_leroy.jpg" alt="Picture of Leroy" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
-              Web developer, with extensive knowledge and years of experience,
-              working in web technologies and Ui / Ux design, delivering quality
-              work.
+              I'm a dedicated and driven software engineer with a comprehensive skill set spanning both front-end and back-end development. My passion for creating exceptional digital experiences motivates me to excel in both aspects of software engineering.
+
             </p>
 
-            <div class="about__info">
+            <!-- <div class="about__info">
               <div>
                 <span class="about__info-title">08+</span>
                 <span class="about__info-name"
@@ -188,7 +185,7 @@
                   Worked At</span
                 >
               </div>
-            </div>
+            </div> -->
 
             <div class="about__buttons">
               <a
@@ -206,7 +203,7 @@
 
       <!--==================== QUALIFICATION ====================-->
       <section class="qualification section" id="qualifications">
-        <h2 class="section__title">Qualifications</h2>
+        <h2 class="section__title">Experience</h2>
         <span class="section__subtitle"
           >My personal and professional journey</span
         >
@@ -246,7 +243,7 @@
                   >
                   <div class="qualification__calendar">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2020 - 2024
+                    B.S in Computer Science 2020 - 2023
                   </div>
                 </div>
               </div>
@@ -258,7 +255,7 @@
                   <span class="qualification__subtitle">Avanade</span>
                   <div class="qualification__calendar">
                     <i class="fa-solid fa-calendar-days"></i>
-                    Summer of 2023
+                    May - August 2023
                   </div>
                 </div>
                 <div>
@@ -323,7 +320,7 @@
             </div>
             <div>
               <a href="#" class="button button--flex">
-                Send Message <i class="fa-regular fa-paper-plane"></i>
+                Send Message <i class="fa-solid fa-message nav__icon"></i>
               </a>
             </div>
           </form>
@@ -336,20 +333,20 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Leroy</h1>
-            <span class="footer__subtitle">Full Stack Developer</span>
+            <h1 class="footer__title">Duong Phan</h1>
+            <span class="footer__subtitle">Software Engineer</span>
           </div>
 
           <ul class="footer__links">
-            <li>
+            <!-- <li>
               <a href="#" class="footer__link">something</a>
             </li>
             <li>
               <a href="#" class="footer__link">something</a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
               <a href="#contact" class="footer__link">Contact me</a>
-            </li>
+            </li> -->
           </ul>
 
           <div class="footer__socials">
@@ -366,7 +363,7 @@
             </a>
           </div>
         </div>
-        <p class="footer__copy">&#169; Leroy. All rights reserved</p>
+        <p class="footer__copy">&#169; Duong Phan. All rights reserved</p>
       </div>
     </footer>
 
