added nickname to header text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/b0cfaa7c88.js"
       crossorigin="anonymous"
     ></script>
-
+     
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
 
@@ -125,10 +125,10 @@
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, I'm Duong</h1>
+              <h1 class="home__title">Hi, my name is Duong</h1>
               <!-- <h3 class="home__subtitle">Software Engineer</h3> -->
               <p class="home__description">
-                I'm a software engineer that is based in Houston, Texas
+                You can also call me Leroy. I'm a software engineer that is based in Houston, Texas
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me&nbsp;
