--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="./pdf/duong_general_resume_2023.pdf"
+                href="./pdf/duong_phan_resume_2023.pdf"
                 class="button button--flex"
               >
-                Download CV
+                My Resume
                 <i class="fa-solid fa-file-arrow-down button__icon"></i
               ></a>
             </div>
