--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/b0cfaa7c88.js"
       crossorigin="anonymous"
     ></script>
-     
+
     <!--==================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
 
@@ -41,8 +41,6 @@
               <a href="#qualifications" class="nav__link">
                 <i class="fa-solid fa-user nav__icon"></i> Qualifications
               </a>
-            </li>
-
             </li>
 
             <li class="nav__item">
@@ -128,7 +126,8 @@
               <h1 class="home__title">Hi, my name is Duong</h1>
               <!-- <h3 class="home__subtitle">Software Engineer</h3> -->
               <p class="home__description">
-                You can also call me Leroy. I'm a software engineer that is based in Houston, Texas
+                You can also call me Leroy. I'm a software engineer that is
+                based in Houston, Texas
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me&nbsp;
@@ -153,12 +152,18 @@
         <span class="section__subtitle">Introduction</span>
 
         <div class="about__container container grid">
-          <img src="./img/dance_leroy.jpg" alt="Picture of Leroy" class="about__img" />
+          <img
+            src="./img/dance_leroy.jpg"
+            alt="Picture of Leroy"
+            class="about__img"
+          />
 
           <div class="about__data">
             <p class="about__description">
-              I'm a dedicated and driven software engineer with a comprehensive skill set spanning both front-end and back-end development. My passion for creating exceptional digital experiences motivates me to excel in both aspects of software engineering.
-
+              I'm a dedicated and driven software engineer with a comprehensive
+              skill set spanning both front-end and back-end development. My
+              passion for creating exceptional digital experiences motivates me
+              to excel in both aspects of software engineering.
             </p>
 
             <!-- <div class="about__info">
@@ -279,7 +284,7 @@
 
               <div>
                 <h3 class="contact__title">Call me</h3>
-                <span class="contact__subtitle">(346) 471 5017  </span>
+                <span class="contact__subtitle">(346) 471 5017 </span>
               </div>
             </div>
 
