changed logo for experience. fixed issue with wrong color on nav logo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <li class="nav__item">
               <a href="#qualifications" class="nav__link">
-                <i class="fa-solid fa-user nav__icon"></i> Experience
+                <i class="fa-solid fa-file-arrow-down nav__icon"></i> Experience
               </a>
             </li>
 
