added mobile link to linkedin

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                 <i class="fa-brands fa-linkedin"></i>
               </a>
               <a
+                href="linkedin://profile/duonghaophan"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a
                 href="https://twitter.com/L3rpio"
                 class="home__social-icon"
                 target="_blank"
