compressed images to smaller size. added grand hotel font

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                   <image
                     class="home__blob-img"
                     y="-30"
-                    xlink:href="./img/professional_leroy.jpg"
+                    xlink:href="./img/professional_leroy-min.jpg"
                   />
                 </g>
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, my name is Duong</h1>
+              <h1 class="home__title">Hi, my name is <span class="cursive-name">Duong</span></h1>
               <!-- <h3 class="home__subtitle">Software Engineer</h3> -->
               <p class="home__description">
                 You can also call me Leroy. I'm a software engineer that is based in Houston, Texas
@@ -153,7 +153,7 @@
         <span class="section__subtitle">Introduction</span>
 
         <div class="about__container container grid">
-          <img src="./img/dance_leroy.jpg" alt="Picture of Leroy" class="about__img" />
+          <img src="./img/dance_leroy-min.jpg" alt="Picture of Leroy" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
@@ -320,7 +320,7 @@
             </div>
             <div>
               <a href="#" class="button button--flex">
-                Send Message <i class="fa-solid fa-message nav__icon"></i>
+                Send Message 
               </a>
             </div>
           </form>
